<resources>
    <string name="app_name">热转印打印</string>
    <string name="txt_main_box_name_good">商品</string>
    <string name="txt_main_box_name_printer">打印</string>
    <string name="txt_author">作者:</string>
    <string name="txt_tag">分类</string>
    <string name="txt_no_net">网络不给力</string>
    <string name="txt_banner_load_error">推荐数据加载错误</string>

    <!--打印机相关-->
    <string name="printer">打印机</string>
    <string name="chinesecolon">：</string>
    <string name="printtext">打印文本</string>
    <string name="printtext1dbarcode">文本一维码</string>
    <string name="print2dbarcode">打印二维码</string>
    <string name="printbitmap">打印图片</string>
    <string name="romupgrade">打印机固件升级</string>
    <string name="noconnectprinter">打印机：未连接打印机</string>
    <string name="unsupportedbluetooth">当前设备不支持蓝牙！</string>
    <string name="unenablebluetooth">蓝牙适配器未开启！</string>
    <string name="selectbondeddevice">选择已绑定的设备</string>
    <string name="setprintquality">设置打印质量</string>
    <string name="setprintdensity">设置打印浓度</string>
    <string name="setprintspeed">设置打印速度</string>
    <string name="setgaptype">设置间隔类型</string>
    <string name="printquality">打印质量：\n</string>
    <string name="printdensity">打印浓度：\n</string>
    <string name="printspeed">打印速度：\n</string>
    <string name="gaptype">间隔类型：\n</string>
    <string name="nowisconnectingprinter">正在连接</string>
    <string name="connectprintersuccess">连接打印机成功！</string>
    <string name="connectprinterfailed">连接打印机失败！</string>
    <string name="nowisprinting">正在打印标签&#8230;</string>
    <string name="printsuccess">标签打印成功！</string>
    <string name="printfailed">标签打印失败！</string>
    <string name="pleaseconnectprinter">打印机未连接，请先连接打印机！</string>
    <string name="waitconnectingprinter">正在连接打印机，请稍候！</string>
    <string name="textvalue">文本数据：</string>
    <string name="onedbarcodevalue">一维码数据：</string>
    <string name="twodbarcodevalue">二维码数据：</string>
    <string name="bitmappreview">图片预览</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="print_param_default">随打印机设置</string>
    <string name="quality">打印质量</string>
    <string name="density">打印浓度</string>
    <string name="gap_type">间隔类型</string>
    <string name="speed">打印速率</string>

    <string name="voice">语音</string>
    <string name="txt_no_permission">没有权限</string>
    <string name="txt_voice">语音</string>
    <string name="txt_scan_result">扫描结果</string>
    <string name="txt_start">开始</string>
    <string name="txt_stop">停止</string>
    <string name="txt_input_state">录音状态:</string>
    <string name="txt_change_state">识别状态:</string>
    <string name="txt_decord_init">初始化...</string>
    <string name="txt_decord_init_finish">初始化完成</string>
    <string name="txt_recording">录音中...</string>
    <string name="txt_decord_error">错误</string>
    <string name="txt_processing">识别中</string>
    <string name="txt_completed">识别完成</string>
    <string name="txt_recognize_error">识别错误</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_decorder">录音</string>
    <string name="txt_sure">确定</string>
    <string name="txt_result_null">语音信息为空</string>
    <string name="txt_mine">个人主页</string>
    <string name="txt_current_username">当前账号:</string>
    <string name="txt_clear_memery">清理缓存</string>
    <string name="txt_logout">退出登录</string>
    <string name="txt_click_login">点击登录</string>
    <string name="txt_pleaselogin">请先登录</string>
    <string name="txt_login">登录</string>
    <string name="txt_username">用户名</string>
    <string name="txt_password">密码</string>
    <string name="txt_register">注册</string>
    <string name="txt_nick">昵称</string>
    <string name="txt_username_password_is_null">账号/密码不能为空</string>
    <string name="txt_username_error">账号只能为手机/邮箱</string>
    <string name="txt_password_error">密码至少为6位</string>
    <string name="txt_user_login_error">登录失败</string>
    <string name="login_succeed">登录成功</string>
    <string name="txt_register_succeed">注册成功</string>
    <string name="txt_mine_bar">我的</string>
    <string name="txt_clear_db_succeed">清除缓存成功</string>
</resources>
