<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_voice_input"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@mipmap/icon_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_decorder"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btn_sure_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right|end"
            android:background="@null"
            android:text="@string/txt_sure"
            android:textColor="@color/white"
            android:textSize="14sp"/>

    </android.support.v7.widget.Toolbar>

    <com.skyfishjy.library.RippleBackground
        android:id="@+id/ripple_voice_container"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:rb_color="#0099CC"
        app:rb_duration="3000"
        app:rb_radius="32dp"
        app:rb_rippleAmount="4"
        app:rb_scale="6">

        <ImageView
            android:id="@+id/img_voice"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/icon_voice_input"/>

    </com.skyfishjy.library.RippleBackground>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_input_state"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txt_record_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_change_state"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txt_change_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_voice_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_record_state"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/actionsheet_middle_selector"
            android:text="@string/txt_start"
            android:textColor="@color/tab_selected_color"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btn__cancel_record"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/actionsheet_middle_selector"
            android:text="@string/txt_cancel"
            android:textColor="@color/tab_selected_color"
            android:textSize="16sp"
            android:visibility="invisible"/>

    </LinearLayout>
</LinearLayout>